# picovoice

./: .gitattributes  .gitignore  .gitmodules  DELETEME.TXT  LICENSE  Package.swift  README.md
.github/: bringup-github-runner.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: android-appcenter.yml  android-browserstack.yml  android-demos.yml  angular-codestyle.yml  angular-demos.yml  angular.yml  c-demos.yml  dotnet-codestyle.yml  dotnet-demos.yml  dotnet.yml  flutter-codestyle.yml  flutter-demos.yml  flutter.yml  go-codestyle.yml  go-demos.yml  go.yml  ios-appcenter.yml  ios-browserstack.yml  ios-demos.yml  java-codestyle.yml  java-demos.yml  java.yml  nodejs-codestyle.yml  nodejs-demos.yml  nodejs.yml  python-codestyle.yml  python-demos.yml  python.yml  react-codestyle.yml  react-demos.yml  react-native-codestyle.yml  react-native-demos.yml  react-native-tests.yml  react-native.yml  react.yml  rust-codestyle.yml  rust-demos.yml  rust.yml  spell-check.yml  unity-codestyle.yml  (+8 more)
binding/python/: .gitignore  README.md  picovoice.py  requirements.txt  setup.py  tes_picovoice.py  test_picovoice.py
demo/alarm/: main.py
demo/android/: README.md
demo/angular/: .gitignore  README.md  angular.json  karma.conf.js  package.json
demo/c/: CMakeLists.txt  README.md  picovoice_demo_file.c  picovoice_demo_mic.c  test_demo.py
demo/c/test/: test_picovoice_c.py  test_util.py
demo/dotnet/: .gitignore  PicovoiceDemo.sln  README.md
demo/electron/: .gitignore  README.md  alarm.yaml  index.html  package.json  tsconfig.json  vite.config.ts
demo/flutter/: .gitignore  README.md  copy_assets.sh  copy_test_resources.sh  pubspec.yaml
demo/flutter-clock/: .gitignore  README.md  copy.sh  pubspec.yaml
demo/go/: README.md  go.mod  go.sum
demo/ios/: .gitignore  Podfile  README.md
demo/ios-swiftui/: .gitignore  Podfile  copy.sh
demo/java/: README.md  build.gradle  settings.gradle
demo/java-swing/: .gitignore  README.md  build.gradle  copy.sh  settings.gradle
demo/java-vui/: .gitignore
demo/javascript/: README.md
demo/mcu/: README.md  generate_pv_params_file.py
demo/nodejs/: README.md  file.js  mic.js  package.json
demo/python/: .gitignore  README.md  picovoice_demo_file.py  picovoice_demo_mic.py  requirements.txt  setup.py
demo/react/: .gitignore  README.md  package.json
demo/react-native/: .gitignore  App.tsx  README.md  app.json  appcenter-post-clone.sh  appcenter-pre-build.sh  copy.js  package.json
demo/react-native-clock/: .gitignore  App.js  App.tsx  README.md  app.json  copy.js  package.json
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs  util.rs
sdk/rust/tests/: picovoice_tests.rs
(+740 files in other folders)
