[package]
name = "picovoice"
version = "3.0.0"
edition = "2018"
description = "Rust SDK for Picovoice's voice recognition platform"
license = "Apache-2.0"
homepage = "https://picovoice.ai/"
repository = "https://github.com/Picovoice/picovoice"
keywords = [
    "natural-language",
    "speech-recognition",
    "voice-control",
    "voice-recognition",
    "wake-word",
]
publish = true

exclude = [
    "tests/",
]

[lib]
name = "picovoice"
path = "src/lib.rs"
crate_type = ["lib"]

[dependencies]
pv_porcupine = { path = "../../resources/porcupine/binding/rust" }
pv_rhino = { path = "../../resources/rhino/binding/rust" }

[dev-dependencies]
itertools = "0.10.1"
rodio = "0.14"
serde_json = "1.0.91"
